--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-mock",
+  "name": "quick-task",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@wdio/cli": "^7.24.0",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "msw": "^0.47.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
@@ -18,6 +21,8 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/vue": "^5.8.3",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -26,18 +31,29 @@
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^1.1.3",
+    "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
+    "@wdio/allure-reporter": "^7.24.0",
+    "@wdio/local-runner": "^7.24.0",
+    "@wdio/mocha-framework": "^7.24.0",
+    "@wdio/spec-reporter": "^7.24.0",
     "babel-jest": "^27.0.6",
+    "chromedriver": "^104.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5",
-    "vue-template-compiler": "^2.6.14"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.5.5",
+    "vue-template-compiler": "^2.6.14",
+    "wdio-chromedriver-service": "^7.3.2",
+    "wdio-wait-for": "^2.2.6"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
