--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.0.96",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/vue": "^5.8.3",
     "@types/jest": "^27.0.1",
@@ -47,6 +48,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "material-design-icons-iconfont": "^6.7.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "ts-jest": "^27.0.4",
