--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@wdio/cli": "^7.24.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "msw": "^0.47.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
